# django-generator

./: README.md  main.py  pyproject.toml
src/django_ai_generator/: api_client.py  cli.py  file_manager.py  filetest.py  generator.py  system_instructions.txt
